tests/pass/files/default_params.c

int main() {
    int i;
    char c;
    float f;

    printf("%d", i);
    printf("%c", c);
    printf("%f", f);
    return 0;
}