tests/semantic_errors/files/proj_5_nested_function_declaration.c

int main() {

    int add(int a, int b) {
        return a + b;
    }

    printf("%d", add(1, 2));

}